private room server and client
